--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -5,7 +5,7 @@
 
 title: Academic # Website name
 baseurl: 'https://example.com/' # Website URL
-copyright: '' # Footer text, e.g. '© {year} Me'
+copyright: '2022 Nikolaus Vertovec' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
