--- a/theme.toml
+++ b/theme.toml
@@ -1,4 +1,4 @@
-name = "Vertovec"
+name = "Academic"
 license = "MIT"
 licenselink = "https://github.com/wowchemy/starter-hugo-academic/blob/master/LICENSE.md"
 description = "Use the website builder to easily build your site with 50+ widgets and deploy with one click! Fully customize your site with themes, plugins, and language packs."
@@ -40,11 +40,11 @@ features = ["page builder", "widgets", "themes", "search", "research publication
             "blog", "create courses", "talks", "events", "slides", "gallery", "contact form"]
 
 [author]
-  name = "Nikolaus Vertovec"
-  homepage = "https://vertovec.info"
+  name = "George Cushen"
+  homepage = "https://georgecushen.com"
 
 # If porting an existing theme
 [original]
-  name = "George Cushen"
-  homepage = "https://georgecushen.com"
+  name = "
+  homepage = ""
   repo = ""
