--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -13,7 +13,6 @@ font_size: L
 # SEO
 
 site_type: Person
-local_business_type: ''
 org_name: 'University of Oxford'
 description: ''
 twitter: ''
@@ -22,7 +21,7 @@ twitter: ''
 
 email: nikolaus.vertovec@eng.ox.ac.uk
 address:
-  street: Parks Road
+  street: Department of Engineering Science, Parks Road
   city: Oxford
   postcode: OX1 3PJ
   country: United Kingdom
@@ -50,7 +49,7 @@ address_format: en-us
 highlight: true
 highlight_languages:
   - r
-math: false
+math: true
 diagram: false
 privacy_pack: false
 edit_page:
