--- a/netlify.toml
+++ b/netlify.toml
@@ -3,6 +3,7 @@
   to = "https://github.com/nikovert/Code---Finite-sample-learning-of-moving-targets"
   status = 200
   force = true
+  headers = {X-From = "Netlify"}
 
 [build]
   command = "hugo --gc --minify -b $URL"
