--- a/netlify.toml
+++ b/netlify.toml
@@ -5,6 +5,12 @@
   force = true
 
 [[redirects]]
+  from = "/code/distributed-traffic-routing"
+  to = "https://github.com/nikovert/distributed_traffic_routing"
+  status = 301
+  force = true
+
+[[redirects]]
   from = "/code"
   to = "https://github.com/nikovert"
   status = 301
