--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -19,9 +19,9 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: nikolaus.vertovec@eng.ox.ac.uk
+email: nikolaus.vertovec@st-hughs.ox.ac.uk
 address:
-  street: Department of Engineering Science, Parks Road
+  street: Department of Computer Science, Parks Road
   city: Oxford
   postcode: OX1 3PJ
   country: United Kingdom
