--- a/config/_default/config.yaml
+++ b/config/_default/config.yaml
@@ -4,8 +4,8 @@
 # This file is formatted using YAML syntax - learn more at https://learnxinyminutes.com/docs/yaml/
 
 title: Nikolaus Vertovec # Website name
-baseurl: 'https://example.com/' # Website URL
-copyright: '2022 Nikolaus Vertovec' # Footer text, e.g. '© {year} Me'
+baseurl: 'https://www.vertovec.info/' # Website URL
+copyright: '2025 Nikolaus Vertovec' # Footer text, e.g. '© {year} Me'
 
 ############################
 ## LANGUAGE
